--- a/1.html
+++ b/1.html
@@ -2,104 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Static ChatGPT UI</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-
-    .chat-container {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      max-width: 800px;
-      margin: auto;
-      border: 1px solid #ddd;
-      background-color: white;
-    }
-
-    .chat-window {
-      flex: 1;
-      padding: 20px;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .message {
-      max-width: 75%;
-      padding: 10px 15px;
-      border-radius: 10px;
-      font-size: 14px;
-      line-height: 1.4;
-    }
-
-    .user {
-      align-self: flex-end;
-      background-color: #dcf8c6;
-    }
-
-    .bot {
-      align-self: flex-start;
-      background-color: #e3e3e3;
-    }
-
-    .input-area {
-      display: flex;
-      padding: 10px;
-      border-top: 1px solid #ccc;
-    }
-
-    .input-area input {
-      flex: 1;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      margin-right: 10px;
-    }
-
-    .input-area button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #10a37f;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: default;
-    }
-
-    @media (max-width: 600px) {
-      .chat-container {
-        border: none;
-      }
-
-      .input-area input,
-      .input-area button {
-        font-size: 14px;
-      }
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ChatGPT Static UI</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="chat-container">
+    <header class="chat-header">ChatGPT</header>
+
     <div class="chat-window">
-      <div class="message bot">Hello! How can I help you today?</div>
-      <div class="message user">Can you explain how the chat UI works?</div>
-      <div class="message bot">Sure! This is a static layout showing what a chat app might look like.</div>
+      <div class="message bot">Hello! How can I assist you today?</div>
+      <div class="message user">What is the weather like today?</div>
     </div>
-    <div class="input-area">
+
+    <div class="chat-input">
       <input type="text" placeholder="Type your message..." disabled />
       <button disabled>Send</button>
     </div>
